--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "description": "Practice some React with laracasts course",
   "main": "app.jsx",
   "scripts": {
-     "dev": "vite",
+    "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "check": "tsc --noEmit"
   },
   "type": "module",
   "repository": {
@@ -32,6 +33,7 @@
     "tailwindcss": "^4.1.18",
     "vite": "^5.4.0"
   },
+  
   "devDependencies": {
     "@eslint/js": "^9.21.0",
     "@types/react": "^19.0.10",
@@ -45,7 +47,7 @@
     "globals": "^16.0.0",
     "prettier": "^3.5.3",
     "prettier-plugin-tailwindcss": "^0.6.11",
-    "typescript": "^5.8.2",
+    "typescript": "^5.9.3",
     "vite": "^6.2.0"
   }
 }
